# qv

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/devel/: WW-WL_display_task  app_settings.md  logging.md  modify_mpr_viewer_interaction.md  mpr_viewer.md  mpr_viewer_testing.md  multipanel.md  patient_orientation.md  performance_stragety_phase1.md  performance_strategy.md  shortcuts.md  transfer_function_implementation_guide.md  undo_redo.md
docs/record/: 2026-02-07.md  2026-02-08.md
docs/tasks/: [Done]mpr_viewer_task.md  arrange_mpr_viewer_interactor.md  plan_mpr_slice_direction_settings.md
qv/: __main__.py  app_settings_manager.py  clipping_function.py  histgram.py  logging_setup.py  main.py  region_selection.py  shortcut_manager.py  status.py  ui_mainwindow.py  volumeviewer_interactor_style.py
qv/app/: app_settings_manager.py  logging_setup.py  shortcut_manager.py  status.py
qv/core/: __init__.py  geometry_utils.py  patient_geometry.py  region_selection.py  volume_model.py  window_settings.py
qv/operations/: __init__.py  base_operation.py
qv/ui/: error_notifier.py  mainwindow.py
qv/utils/: json_loader.py  log_util.py  resource_paths.py  vtk_helpers.py
qv/viewer/: camera_controller.py  camera_state.py  volume_viewer.py
qv/viewers/: base_viewer.py  camera_controller.py  camera_viewer.py  coordinates.py  (+3 more)
scripts/: smoke_qt_vtk_multi.py
settings/: app.json  settings.json  shortcuts.json  viewer.json
tests/: conftest.py  test_histgram.py  test_import.py  test_logging_setup.py  test_shortcut_manager.py  test_volume_model.py
(+25 files in other folders)
