[project]
name = "qv"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fonttools>=4.61.1",
    "iniconfig==2.3.0",
    "matplotlib>=3.10.8",
    "numpy==2.4.2",
    "packaging==26.0",
    "pillow==12.1.1",
    "pyinstaller==6.18.0",
    "pyinstaller-hooks-contrib==2026.0",
    "pyqtgraph==0.14.0",
    "pyside6==6.10.2",
    "pytest==9.0.2",
    "setuptools==82.0.0",
    "vtk==9.6.0",
]
